# assignments-3-and-later-flemingpatel

./: .gitignore  .gitmodules
.github/workflows/: github-actions.yml
aesd-char-driver/: aesd-circular-buffer.c  aesdchar.h  main.c
assignments/assignment2/: cross-compile.txt
conf/: username.txt
examples/autotest-validate/: autotest-validate.c
examples/systemcalls/: systemcalls.c  systemcalls.h
examples/threading/: threading.c  threading.h
finder-app/: Makefile  finder.sh  manual-linux.sh  start-qemu-app.sh  writer.c  writer.sh
server/: Makefile  aesdsocket-start-stop  aesdsocket.c  valgrind-out.txt
server/ctwisted/: .gitignore  README.md
server/ctwisted/examples/: CMakeLists.txt  main.c
server/ctwisted/include/: base.h  epoll_loop.h  event_loop.h  list.h  protocol.h  reactor.h  transport.h
server/ctwisted/src/: epoll_loop.c  event_loop.c  reactor.c  tcp_transport.c
student-test/assignment1/: Test_validate_username.c
